[gd_scene load_steps=2 format=3 uid="uid://bldmryd5eq435"]

[ext_resource type="Script" path="res://scripts/menus/rebind_button.gd" id="1_w32cl"]

[node name="RebindButton" type="Control" groups=["Rebindings"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_w32cl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 198.0
offset_bottom = 40.0
mouse_filter = 2

[node name="RebindLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ACTION"

[node name="RebindButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_mask = 7
flat = true

[connection signal="gui_input" from="HBoxContainer/RebindButton" to="." method="_on_rebind_button_gui_input"]
[connection signal="toggled" from="HBoxContainer/RebindButton" to="." method="_on_rebind_button_toggled"]
